fix: include singleton confidence buckets
